--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@ iframe[title] {
 }
 
 button:hover {
-    color: #ff00ff
+    color: #ff00ff;
+}
+
+button:active {
+    color: steelblue;
 }
 
 span,
@@ -61,6 +65,10 @@ img {
     height: auto;
     position: relative;
     top: 40px; left: 40px;
+}
+
+video {
+    position: fixed;
 }
 
 
